		- Fixed NNTP to handle new VFS api.
		- Fixed a number of preferences bugs on the main screen.
		- Fixed E-Mail sigs not being added.
		- Moved E-Mail preferences into its own section.
		- When changing NNTP servers, now deletes newsgroups and users_newsgroups.
		- Applied Patch #102089 - scrollbars for addressbook when composing email.  Thanks jaggdedge <jaggdedge@users.sourceforge.net>

[0.9.2] - Fixed sorting bug in currentusers.php
		- Cleaned up error reporting and form in newaccount.php
		- Fixed viewaccounts.php not updated to the new accounts table.
		- Fixed access_log not being updated durring logouts.
		- Fixed email/folders.php not showing the number of messages in the INBOX.
		- Fixed messages that where being passed around in the headlines admin section.
		- Fixed setup script not working properly with certain version of MySQL.
		- Fixed the participants list in the calendar.
		- Fixed permission bug that was not checking users access to an app.
	    - Applied Patch #101453 - CJK character set display. Thanks Park ChungKyu <pchk@users.sourceforge.net>
		- Applied Patch #101321 - CZECH lang translation. Thanks Petr Moses <pmoses@users.sourceforge.net>
		- Now ISO 639 compliant with language translation id.
		- Applied Patch #101828 - Swedish lang translation.  Thanks Kjell Claesson <keyson@users.sourceforge.net>
		- Fixed group management with new groups and navbar problems.
		- Changed around the way the preferences work.  The $phpgw_info array is also handled a little
		  differently for preferences.  It now looks like:
		  $phpgw_info["user"]["preferences"][appname][preference name]
		- Fixed NNTP call to preferences.php if user does not have any groups selected.
		- Fixed setting of default preferences of new users.
		- Updated Spanish translations.  Thanks gmartine <gmartine@users.sourceforge.net>
		- Default preferences used if not set in DB.
		- NNTP fixed to use the new account table layout.
		- NNTP Header problem fixed.