@@ -36,7 +36,7 @@
        $sql = "insert into addressbook (ab_owner,ab_access,ab_firstname,ab_lastname,ab_title,ab_email,"
        	. "ab_hphone,ab_wphone,ab_fax,ab_pager,ab_mphone,ab_ophone,ab_street,ab_address2,ab_city,"
         . "ab_state,ab_zip,ab_bday,"
-          . "ab_notes,ab_company_id) values ('" . $phpgw_info["user"]["userid"] . "','$access','"
+          . "ab_notes,ab_company_id) values ('" . $phpgw_info["user"]["account_id"] . "','$access','"
           . addslashes($firstname). "','"
           . addslashes($lastname) . "','"
           . addslashes($title)  . "','"
@@ -59,7 +59,7 @@
        $sql = "insert into addressbook (ab_owner,ab_access,ab_firstname,ab_lastname,ab_title,ab_email,"
         . "ab_hphone,ab_wphone,ab_fax,ab_pager,ab_mphone,ab_ophone,ab_street,ab_address2,ab_city,"
         . "ab_state,ab_zip,ab_bday,"
-          . "ab_notes,ab_company) values ('" . $phpgw_info["user"]["userid"] . "','$access','"
+          . "ab_notes,ab_company) values ('" . $phpgw_info["user"]["account_id"] . "','$access','"
           . addslashes($firstname). "','"
           . addslashes($lastname) . "','"
           . addslashes($title)  . "','"
