@@ -153,7 +153,7 @@
 
  <?php
   } else {
-     $phpgw->common->preferences_delete("byappnotheme",$phpgw_info["user"]["userid"],"common");
+     $phpgw->common->preferences_delete("byappnotheme",$phpgw_info["user"]["account_id"],"common");
 
      // If they don't have permissions to the headlines,
      // we don't need to lock the table.
@@ -163,20 +163,20 @@
         $phpgw->db->lock("preferences");
      }
 
-     $phpgw->common->preferences_add($phpgw_info["user"]["userid"],"maxmatchs","common");
-     $phpgw->common->preferences_add($phpgw_info["user"]["userid"],"tz_offset","common");
-     $phpgw->common->preferences_add($phpgw_info["user"]["userid"],"dateformat","common");
-     $phpgw->common->preferences_add($phpgw_info["user"]["userid"],"timeformat","common");
-     $phpgw->common->preferences_add($phpgw_info["user"]["userid"],"lang","common");
-     $phpgw->common->preferences_add($phpgw_info["user"]["userid"],"default_app","common");
+     $phpgw->common->preferences_add($phpgw_info["user"]["account_id"],"maxmatchs","common");
+     $phpgw->common->preferences_add($phpgw_info["user"]["account_id"],"tz_offset","common");
+     $phpgw->common->preferences_add($phpgw_info["user"]["account_id"],"dateformat","common");
+     $phpgw->common->preferences_add($phpgw_info["user"]["account_id"],"timeformat","common");
+     $phpgw->common->preferences_add($phpgw_info["user"]["account_id"],"lang","common");
+     $phpgw->common->preferences_add($phpgw_info["user"]["account_id"],"default_app","common");
 
      if ($navbar_text) {
-        $phpgw->common->preferences_add($phpgw_info["user"]["userid"],"navbar_text","common");
+        $phpgw->common->preferences_add($phpgw_info["user"]["account_id"],"navbar_text","common");
      }
 
      if ($phpgw_info["user"]["apps"]["admin"]) {
         if ($show_currentusers) {
-           $phpgw->common->preferences_add($phpgw_info["user"]["userid"],"show_currentusers","common");
+           $phpgw->common->preferences_add($phpgw_info["user"]["account_id"],"show_currentusers","common");
         }
      }
 
