@@ -6,6 +6,8 @@
 		- Moved E-Mail preferences into its own section.
 		- When changing NNTP servers, now deletes newsgroups and users_newsgroups.
 		- Applied Patch #102089 - scrollbars for addressbook when composing email.  Thanks jaggdedge <jaggdedge@users.sourceforge.net>
+		- owner fields are now working off account_id instead of account_lid
+		- Fixed time format on calendar preferences.
 
 [0.9.2] - Fixed sorting bug in currentusers.php
 		- Cleaned up error reporting and form in newaccount.php
